# backend/src/routes/slot.route.ts
@@ -2,25 +2,47 @@ import { Router } from "express";
 import ParkingSlotController from "../controllers/slot.controller";
 import { validationMiddleware } from "../middlewares/validator.middleware";
 import { checkAdmin, checkLoggedIn } from "../middlewares/auth.middleware";
-import { CreteParkingSlotDTO } from "../dtos/parking_slot.dto";
+import {
+  CreateMultipleParkingSlotsDTO,
+  CreateParkingSlotDTO,
+} from "../dtos/slot.dto";
 
-const ParkingSlotRouter = Router();
+const ParkingSlotRouter2 = Router();
 
-ParkingSlotRouter.post(
+ParkingSlotRouter2.post(
   "/create",
-  [checkAdmin, validationMiddleware(CreteParkingSlotDTO)],
+  [checkAdmin, validationMiddleware(CreateParkingSlotDTO)],
   ParkingSlotController.createParkingSlot
 );
-ParkingSlotRouter.get(
+ParkingSlotRouter2.post(
+  "/create/bulk",
+  [checkAdmin],
+  validationMiddleware(CreateMultipleParkingSlotsDTO),
+  ParkingSlotController.createMultipleSlots
+);
+
+ParkingSlotRouter2.get(
   "/all",
   [checkLoggedIn],
   ParkingSlotController.fetchParkingSlots
 );
-ParkingSlotRouter.get(
+ParkingSlotRouter2.get(
   "/all/available",
   [checkLoggedIn],
   ParkingSlotController.fetchFreeSlots
 );
-ParkingSlotRouter.get("/:id", [checkLoggedIn], ParkingSlotController.findById);
+ParkingSlotRouter2.get("/:id", [checkLoggedIn], ParkingSlotController.findById);
 
-export default ParkingSlotRouter;
+ParkingSlotRouter2.patch(
+  "/:id",
+  [checkAdmin, validationMiddleware(CreateParkingSlotDTO, true)],
+  ParkingSlotController.updateSlot
+);
+
+// ✅ Delete parking slot
+ParkingSlotRouter2.delete(
+  "/:id",
+  [checkAdmin],
+  ParkingSlotController.deleteSlot
+);
+export default ParkingSlotRouter2;
